--- a/src/OTP/index.html
+++ b/src/OTP/index.html
@@ -40,7 +40,7 @@
               <td>
                 <img
                   alt=""
-                  src="https://imgcar.s3.ap-southeast-1.amazonaws.com/logo.png"
+                  src="https://techhomearchive.s3.ap-southeast-1.amazonaws.com/Logo.png"
                   height="200px"
                 />
               </td>
@@ -94,7 +94,7 @@
               "
             >
               Cảm ơn bạn đã lựa chọn TechHome. Sử dụng mã OTP sau để hoàn tất
-              thủ tục thay đổi địa chỉ email của bạn. OTP là Có giá trị trong
+              thủ tục thay đổi mật khẩu của bạn. OTP là Có giá trị trong
               <span style="font-weight: 600; color: #1f1f1f">10 phút</span>. Vui
               lòng không chia sẻ mã này với bất kỳ ai.
             </p>
@@ -127,7 +127,7 @@
           <a
             href="mailto:archisketch@gmail.com"
             style="color: #499fb6; text-decoration: none"
-            >hyperchat@gmail.com</a
+            >techhome@gmail.com</a
           >
           or visit our
           <a
